# IBC

./: .gitignore  CMakeLists.txt  PngFormatRead.cpp  PngFormatRead.hpp  main.cpp
src/: main.cpp
src/PngFormatLib/: Chunk.hpp  DataImage.cpp  DataImage.hpp  EndImage.cpp  EndImage.hpp  ErrorInfo.hpp  ErrorInformationChunks.hpp  ErrorObject.hpp  GeneralFunction.hpp  HeaderImage.cpp  HeaderImage.hpp  HerderImage.cpp  HerderImage.hpp  Plte.cpp  Plte.hpp  PngFormat.cpp  PngFormat.hpp  Signature.cpp  Signature.hpp
